First changes done.

--- a/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/portfolio-list.html
+++ b/nui-creative-portfolio-html-website-template-2023-03-12-17-37-46-utc/Nui - template package/UPLOAD/nui/portfolio-list.html
@@ -433,13 +433,13 @@
 							-->
 							<div class="ph-caption">
 								<div class="ph-caption-subtitle">
-									<div class="ph-appear">Selected Works</div>
+									<div class="ph-appear">Our Services</div>
 								</div>
 								<h1 class="ph-caption-title">
-									<div class="ph-appear">Portfolio</div>
+									<div class="ph-appear">Content Production</div>
 								</h1>
 								<div class="ph-caption-title-ghost">
-									<div class="ph-appear">Portfolio</div>
+									<div class="ph-appear">Services</div>
 								</div>
 							</div>
 							<!-- End page header caption -->
@@ -488,35 +488,116 @@
 									===============================
 									* Use class "pli-image-is-light" if needed, it makes the caption visible better if you use light image. 
 									-->
-									<a href="single-project-1.html" class="portfolio-list-item" data-cursor="View<br>Project">
+									<a href="single-project-2.html" class="portfolio-list-item" data-cursor="View<br>Project">
 
 										<!-- Use class "cover-opacity-*" to set image overlay if needed. For example "cover-opacity-2". Note: It is individual and depends on the image you use. More info about helper classes in file "helper.css". No effect if "pli-image-is-light" used on "portfolio-list-item"! -->
 										<figure class="pli-image cover-opacity-2">
-											<img class="anim-image-parallax tt-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/portfolio/1200/portfolio-1.jpg" alt="image">
+											<img class="anim-image-parallax tt-lazy" src="assets/img/low-qlt-thumb.jpg" data-src="assets/img/portfolio/1200/portfolio-2.jpg" alt="image">
 										</figure> <!-- /.pli-image -->
 
 										<div class="pli-caption-front">
 											<div class="pli-caption">
 												<div class="pli-categories-wrap">
-													<div class="pli-category">People</div>
+													<div class="pli-category">Creative</div>
 													<!-- <div class="pli-category">Varia</div> -->
 												</div> <!-- /.pli-categories-wrap -->
 
-												<h2 class="pli-title">Elegant<br class="hide-from-sm"> Women</h2> <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
+												<h2 class="pli-title">Vidhai<br class="hide-from-sm">Digital<br class="hide-from-sm">Vithika,<br class="hide-from-sm">Uttar Pradesh</h2><!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
 											</div> <!-- /.pli-caption -->
 										</div> <!-- /.pli-caption-front -->
 
 										<div class="pli-caption pli-caption-back">
 											<div class="pli-categories-wrap">
-												<div class="pli-category">People</div>
+												<!-- <div class="pli-category">Creative</div> -->
 												<!-- <div class="pli-category">Varia</div> -->
 											</div> <!-- /.pli-categories-wrap -->
 
-											<h2 class="pli-title">Elegant<br class="hide-from-sm"> Women</h2> <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
+											<h2 class="pli-title">The<br class="hide-from-sm"> Chase</h2> <!-- You can use <br class="hide-from-sm"> to break a text line if needed -->
 										</div> <!-- /.pli-caption -->
 
 										<div class="pli-counter"></div>
 									</a> 
+
+
+									<div>
+										<div class="tt-section-inner tt-wrap">
+			
+											<div class="tt-row">
+												<div class="tt-col-lg-5">
+			
+												</div>
+			
+												<div class="tt-col-lg-7 tt-align-self-center">
+			
+													<!-- Begin testimonials slider 
+													===============================
+													* Use class "text-center" to align text to the center.
+													* Use class "cursor-drag" to enable cursor drag on carousel hover ("data-simulate-touch" attribute must be enabled!).
+													* Use class "ts-hide-pagination" to hide pagination (for desktop only!).
+													* Use class "ts-hide-navigation" to hide navigation arrows.
+													* Use class "ts-full-width" to enable full width slider (useful for standalone element).
+													* Available data attributes:
+															data-speed="900"......................(milliseconds)
+															data-autoplay="5000"..................(milliseconds. Note: disabled after user first interactions)
+															data-simulate-touch="true"............(true/false)
+															data-loop="true"......................(true/false)
+													-->
+													<div class="tt-testimonials-slider cursor-drag ts-scale-down ts-hide-navigation anim-fadeinup" data-loop="true" data-simulate-touch="true" data-speed="900">
+			
+														<!-- Begin swiper container -->
+														<div class="swiper">
+			
+															<!-- Begin swiper wrapper (required) -->
+															<div class="swiper-wrapper">
+			
+																<!-- Begin swiper slide 
+																======================== -->
+																<div class="swiper-slide" style="text-align: right !important;">
+			
+																	<!-- Begin testimonials slider item 
+																	==================================== -->
+																	<div class="tt-testimonials-slider-item">
+																		<div class="tt-ts-item-inner">
+																			<div class="tt-ts-text">
+																				<p>We craft content that audience - researching, stratrgizing writing, desigining and optimizing your maximum impact. Your buisness deserves... <a href="portfolio-interactive-inline.html">Read More</a></p>
+																			</div> <!-- /.tt-ts-text -->
+																		
+																		</div> <!-- /.tt-ts-item-inner -->
+																	</div> 
+																	<!-- End testimonials slider item -->
+			
+																</div> 
+																<!-- End swiper slide -->
+			
+																
+															</div>
+															<!-- End swiper wrapper -->
+			
+														</div>
+														<!-- End swiper container -->
+			
+			
+														<!-- Begin testimonials slider navigation (arrows) 
+														=================================================== -->
+														<div class="tt-ts-nav-prev">
+															<div class="tt-ts-nav-arrow magnetic-item"><i class="tt-arrow-left"></i></div>
+														</div>
+														<div class="tt-ts-nav-next">
+															<div class="tt-ts-nav-arrow magnetic-item"><i class="tt-arrow-right"></i></div>
+														</div>
+														<!-- End testimonials slider navigation -->
+			
+														<!-- Testimonials slider pagination -->
+														<div class="tt-ts-pagination hide-cursor"></div>
+			
+													</div>
+													<!-- End testimonials slider -->
+			
+												</div> <!-- /.tt-col -->
+											</div> <!-- /.tt-row -->
+			
+										</div>
+									</div>
 									<!-- End portfolio list item -->
 
 									<!-- Begin portfolio list item 
